--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,17 @@ build/
 
 # Java и пакеты
 *.class
+
+# Log file
 *.log
+
+# BlueJ files
 *.ctxt
+
+# Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+# Package Files #
 *.jar
 *.war
 *.nar
@@ -48,6 +56,7 @@ build/
 *.zip
 *.tar.gz
 *.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
